# rocon_app_platform

./: .travis.yml  README.md  rocon_app_platform.rosinstall  stack.xml
apps/rocon_app_example/: .project  .pydevproject  CMakeLists.txt  Makefile  mainpage.dox  manifest.xml
apps/rocon_app_example/resources/: CMakeLists.txt
apps/rocon_app_example/src/: CMakeLists.txt  example.py
apps/rocon_app_kobukibot/: CMakeLists.txt  Makefile  manifest.xml
apps/rocon_app_kobukibot/resources/: CMakeLists.txt
apps/rocon_app_projector/src/: CMakeLists.txt  main.cpp  main_window.cpp  qnode.cpp
apps/rocon_app_rango/: .project  .pydevproject  CMakeLists.txt  manifest.xml  readme.txt
apps/rocon_app_rango/resources/: CMakeLists.txt
apps/rocon_app_rango/src/: CMakeLists.txt  rango.py
apps/rocon_app_teleop/: .gitignore  .project  CMakeLists.txt  Makefile  build.xml  mainpage.dox  manifest.xml  readme.txt
concert_client/: .project  .pydevproject  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
concert_client/launch/: client.launch  pirate.launch  whoola.launch
concert_client/param/: client_gateway.yaml
concert_client/scripts/: client.py  concert_client.py
concert_client/src/concert_client/: __init__.py  concert_client.py  concertclient.py  concertmaster_discovery.py  util.py
rocon_app_manager/: .project  .pydevproject  CHANGELOG.rst  CMakeLists.txt  LICENSE  Makefile  mainpage.dox  package.xml  setup.py
rocon_app_manager/concert/: paired.concert
rocon_app_manager/doc/: Makefile  conf.py  index.rst  make.bat  manifest.yaml  modules.rst  rapp_api.rst  rapp_manager_api.rst
rocon_app_manager/doc/html/: CHANGELOG.html  genindex.html  index-msg.html  index.html  objects.inv  rapp_manager_api.html  search.html  searchindex.js
rocon_app_manager/graveyard/: _app_manager.xml  _gateway.xml  _rocon_master_info.xml  concert_client.launch  concert_flips.yaml  rapp_manager.py  rapp_manager_script.py
rocon_app_manager/launch/: concert.launch  concert_client.launch  concert_pirate.launch  concert_whoola.launch  multimaster.launch  paired.launch  paired_master.launch  paired_private.launch  paired_public.launch  pairing_demo.launch  rapp_manager.launch  standalone.launch  standalone_with_capability_server.launch
rocon_app_manager/launch/includes/: _app_manager.xml  _app_manager_gateway.xml  _capabilities.xml  _gateway.xml  _interactions.xml  _zeroconf.xml  app_manager_gateway.xml
rocon_app_manager/param/: advertisements.yaml  app_manager_advertisements.yaml  app_manager_defaults.yaml  app_manager_flips.yaml  capabilities.yaml  default.yaml  paired_master_pulls.yaml  preferred_default.yaml  zeroconf.yaml
rocon_app_manager/scripts/: concert_client.py  concertified.py  pairing_master.py  public_master.py  rapp_manager.py  standalone.py
rocon_app_manager/src/rocon_app_manager/: __init__.py  cap.py  caps_list.py  concert_client.py  concertified.py  exceptions.py  logger.py  pairing_client.py  rapp.py  rapp_list.py  rapp_manager.py  ros_parameters.py  standalone.py  utils.py
rocon_app_manager/tests/: CMakeLists.txt
rocon_app_manager/tests/nosetests/: test_rapp_manager.py  test_utils.py
rocon_app_manager/tests/rostests/: CMakeLists.txt
rocon_app_manager_www/: .cproject  .project  CMakeLists.txt  mainpage.dox  package.xml
rocon_app_manager_www/www/: index.html  styles.css
rocon_app_platform/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
rocon_app_utilities/: .project  CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml  setup.py
rocon_app_utilities/doc/: Makefile  conf.py  exceptions.rst  index.rst  indexer_api.rst  make.bat  manifest.yaml  rapp_api.rst  rapp_specification.rst
rocon_app_utilities/env-hooks/: 15.rocon_app.bash.em  15.rocon_app.tcsh.em  15.rocon_app.zsh.em
rocon_app_utilities/scripts/: rapp  rocon_create_app
rocon_app_utilities/shells/: env.bash  env.tcsh  env.zsh
rocon_app_utilities/src/rocon_app_utilities/: __init__.py  dependencies.py  exceptions.py  indexer.py  params.py  rapp.py  rapp_cmd.py  rapp_loader.py  rapp_repositories.py  rapp_validation.py
rocon_app_utilities/tests/: test_indexer.py  test_rapp.py  test_rapp_repositories.py
rocon_app_utilities/tests/test_rapp_repos/: package.xml
rocon_apps/: .gitignore  .project  .pydevproject  CHANGELOG.rst  CMakeLists.txt  mainpage.dox  manifest.xml  package.xml  setup.py
rocon_apps/apps/: chirp.index  listener.index  rocon.apps  rocon.rapps  talker.index
rocon_apps/apps/chirp/: chirp.app  chirp.interface  chirp.launch  chirp.rapp
rocon_apps/apps/delivery/: Readme.md  delivery.graphml  delivery.interface  delivery.rapp
rocon_apps/apps/image_stream/: image_stream.interface  image_stream.rapp
rocon_apps/apps/kitchen/: kitchen.app  kitchen.interface  kitchen.launch
rocon_apps/apps/listener/: listener.app  listener.interface  listener.launch  listener.rapp
rocon_apps/apps/make_a_map/: make_a_map.rapp
rocon_apps/apps/robot_teleop/: robot_teleop.launch.xml  robot_teleop.rapp
rocon_apps/apps/robot_video_teleop/: robot_video_teleop.rapp
rocon_apps/apps/talker/: talker.interface  talker.launch  talker.parameters  talker.rapp
rocon_apps/apps/teleop/: teleop.interface  teleop.launch.xml  teleop.rapp
rocon_apps/apps/text_to_speech/: text_to_speech.interface  text_to_speech.rapp
rocon_apps/apps/turtle_navigation/: turtle_nav.app  turtle_nav.interface  turtle_nav.launch
rocon_apps/apps/turtle_stroll/: turtle_stroll.app  turtle_stroll.interface  turtle_stroll.launch  turtle_stroll.yaml
rocon_apps/apps/turtle_stroll_sim/: readme.txt  turtle_stroll_sim.app  turtle_stroll_sim.interface  turtle_stroll_sim.launch
rocon_apps/apps/turtlesim_control/: turtlesim_control.app  turtlesim_control.interface  turtlesim_control.launch
rocon_apps/apps/turtlesim_viz/: turtlesim_viz.interface
rocon_apps/apps/video_teleop/: video_teleop.interface  video_teleop.rapp
rocon_apps/icons/: Readme.md  get_bubble_template
rocon_apps/launch/: typing_to_string.launch
rocon_apps/scripts/: chirp.bash  commander  talker  typing_to_string
(+185 files in other folders)
