<package>
  <name>rocon_app_manager</name>
  <version>0.6.1</version>
  <description>
    The public interface and retaskable interface for a robot.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/rocon_app_manager</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_app_platform</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_app_platform/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author> -->
  <author email="jihoonlee.in@gmail.com">Jihoon Lee</author>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>capabilities</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rosmaster</run_depend>
  <run_depend>rocon_apps</run_depend>
  <run_depend>rocon_app_manager_msgs</run_depend>
  <run_depend>rocon_gateway</run_depend>
  <run_depend>rocon_hub</run_depend>
  <run_depend>gateway_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rocon_python_comms</run_depend>
  <run_depend>rocon_utilities</run_depend>
  <run_depend>rocon_std_msgs</run_depend>
  <run_depend>rocon_uri</run_depend>
</package>
