<package>
  <name>rocon_app_manager_www</name>
  <version>0.1.1</version>
  <description>
    Www frontend to the app manager
  </description>
  <maintainer email="jihoonl@rnd.yujinrobot.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rocon_app_manager_www</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_app_platform</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_app_platform/issues</url>
  <author email="jihoonl@rnd.yujinrobot.com">Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <!--  What here? -->
  <!--  <run_depend>roslib</run_depend> -->
  <export>
  </export>
</package>
