<?xml version="1.0"?>
<package>
  <name>rocon_app_platform</name>
  <version>0.5.1</version>
  <description>
    Robot application platform for ros robots with a default implementation in python.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <license>BSD</license>
  <url type="website">http://www.ros.org/wiki/rocon_app_platform</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_app_platform</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_app_platform/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="jihoonlee.in@gmail.com">Jihoon Lee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rocon_app_manager</run_depend>
  <run_depend>rocon_apps</run_depend>
  
  <export>
    <metapackage/>
  </export>
</package>

