<?xml version="1.0"?>
<package>
  <name>rocon_app_utilities</name>
  <version>0.7.13</version>
  <description>The rocon_app_utilities package</description>

  <maintainer email="jihoonlee.in@gmail.com">Jihoon Lee</maintainer>
  <author>Jihoon Lee</author>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/rocon_app_utilities</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_app_platform</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_app_platform/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>python-catkin-pkg</build_depend>
  <build_depend>roslint</build_depend>
  <run_depend>rocon_console</run_depend>
  <run_depend>rocon_python_utils</run_depend>
  <run_depend>rocon_uri</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>roslaunch</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
  </export>

</package>
