<package>
  <name>rocon_apps</name>
  <version>0.6.1</version>
  <description>
    Core rocon apps for use with the appmanager and rocon concert.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rocon_apps</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_app_platform</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_app_platform/issues</url>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <author email="jihoonlee.in@gmail.com">Jihoon Lee</author>
  <author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rospy_tutorials</run_depend>
  <run_depend>rocon_app_manager_msgs</run_depend>
  <run_depend>gateway_msgs</run_depend>
  <run_depend>rocon_bubble_icons</run_depend>
  <export>
    <rosdoc config="rosdoc.yaml"/>
    <rocon_app>apps/chirp/chirp.rapp</rocon_app>
    <rocon_app>apps/listener/listener.rapp</rocon_app>
    <rocon_app>apps/talker/talker.rapp</rocon_app>
    <rocon_app>apps/teleop/teleop.rapp</rocon_app>
  </export>
</package>
