<package>
  <name>rocon_apps</name>
  <version>0.7.13</version>
  <description>
    Core rocon apps for use with the appmanager and rocon concert.
  </description>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <maintainer email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/rocon_apps</url>
  <url type="repository">https://github.com/robotics-in-concert/rocon_app_platform</url>
  <url type="bugtracker">https://github.com/robotics-in-concert/rocon_app_platform/issues</url>
  <author>Daniel Stonier</author>
  <author>Jihoon Lee</author>
  <author>Marcus Liebhardt</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>gateway_msgs</run_depend>
  <run_depend>rocon_app_manager_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rospy_tutorials</run_depend>
  <run_depend>topic_tools</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml"/>
    <rocon_app>apps/chirp/chirp.rapp</rocon_app>
    <rocon_app>apps/listener/listener.rapp</rocon_app>
    <rocon_app>apps/talker/talker.rapp</rocon_app>
    <rocon_app>apps/teleop/teleop.rapp</rocon_app>
    <rocon_app>apps/text_to_speech/text_to_speech.rapp</rocon_app>
    <rocon_app>apps/video_teleop/video_teleop.rapp</rocon_app>
    <rocon_app>apps/make_a_map/make_a_map.rapp</rocon_app>
    <rocon_app>apps/waypoint_nav/waypoint_nav.rapp</rocon_app>
    <rocon_app>apps/image_stream/image_stream.rapp</rocon_app>
    <rocon_app>chirp_apps/lion/lion_chirp.rapp</rocon_app>
    <rocon_app>chirp_apps/angry_cat/angry_cat_chirp.rapp</rocon_app>
    <rocon_app>chirp_apps/meow/meow_chirp.rapp</rocon_app>
    <rocon_app>chirp_apps/moo/moo_chirp.rapp</rocon_app>
  </export>
</package>
