################################################################################
# Subdirectories
###############################################################################

add_subdirectory(app)

###############################################################################
# Files
###############################################################################

set(DIR_FILES
    CMakeLists.txt
)

install(FILES ${DIR_FILES} DESTINATION ${PROJECT_NAME}/resources )
