<package>
  <name>test_package_for_rapps</name>
  <version>0.0.0</version>
  <description>.</description>
  <maintainer email="noreply@example.com">Nobody</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rocon_app_utilities</run_depend>
  <export>
    <rocon_app>apps/foo/foo.rapp</rocon_app>
  </export>
</package>
