###############################################################################
# Files
###############################################################################

set(IMAGES
    CMakeLists.txt
    rocon-logo-digital-blue.png
)

install(FILES ${IMAGES} DESTINATION ${PROJECT_NAME}/resources/images )
