###############################################################################
# Files
###############################################################################

set(IMAGES
    CMakeLists.txt
    icon.png
    rocon-logo-digital-blue.png
    rocon-logo-grey-window.png
    dk04.jpg
    dk05.jpg
    dk06.jpg
    dk07.jpg
    dk08.jpg
)

install(FILES ${IMAGES} DESTINATION ${PROJECT_NAME}/resources/images )
